1.2vcli Panellet:

* Provenance and Python components
	- Modified the dispose method of JythonExecutableComponentAdapter (removed the nullification of the interpreter to allow MrProbe to clearly clean up)
	- The state serializations store the string representation of the locals() call
	- Functions are missing the code, but that code is already available on the embedded component context
	
* Meandre provenance infrastructure.
	- Added MeandreProbingVocabulary (native Meandre provenance dialect)
	- Implemented the MeandreRDFDialectProbeImpl
	- Tested and verified the spitted triples
	
* MrProbe merge against the Conductor, Executor, WrappedComponent, and ComponentContext
	- Modification to allow them to be probed
	- All the present engine tests passed for java only flows
	
* Added MrProbe class. This thread stands during the execution to gather information of the run
	- New class added MrProbe
	- New package org.meandre.core.engine.probes added
		* This package contains different implementations of the probe mechanisms
		* NullProbeImpl discards all the information
		* ToPrintStreamProbreImpl diverts all the info as text to the provided print stream

* Added cacheRefresh to the add/remove location services

* Modified the ComponentContextProperties to provide getFlowID function [Feb 16th 2008 by Amit Kumar]
	-Added the function implementation in ComponentContextImpl/Wrapped*Required/Conductor and WrappedComponents
	- This distinguishes getFlowID/getFlowExecutionID

* Modified the /services/repository/add and /services/repository/add_flow services
	- Added overwrite flag (if true overwrites the component/flow descriptor)
	- Added dump flag (if true dumps the repository after the requested modifications using the same format of requested modifications)

* Modified the ConductorTest to include the Python component.

* Added a Python component to the demo set
	- The component just turns a string to upper case (named To Uppercase)
