@@ -118,7 +118,7 @@ public class Conductor {
 	public Executor buildExecutor(QueryableRepository qr, Resource res, MrProbe thdMrProbe)
 	throws CorruptedDescriptionException, ConductorException {
 		// The unique execution flow ID
-		String sFlowUniqueExecutionID = res.toString()+File.pathSeparator+System.currentTimeMillis()+File.pathSeparator+(new Random().nextInt());
+		String sFlowUniqueExecutionID = res.toString()+"/"+System.currentTimeMillis()+"/"+(Math.abs(new Random().nextInt()));
 		String flowID = res.toString();
 		// Map class names to classes
 		Hashtable<String,Class> htMapNameToClass = new Hashtable<String,Class>();
