@@ -255,7 +255,7 @@ implements Probe {
 		modProbe.add(stm);
 	}
 
-	/** The executable component was fired.
+	/** The executable component is cooling down.
 	 * 
 	 * @param sECID The unique executable component ID
 	 * @param owc The wrapped component done with the disposing call
